kubernetes/copyparty.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: copyparty
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      containers:
      - name: copyparty
        image: copyparty/dj:1.19.7
        ports:
        - containerPort: 3923
        volumeMounts:
          - name: config
            mountPath: /cfg
          - name: data
            mountPath: /w
      volumes:
        - name: config
          hostPath:
            path: /home/skarjala/development/cinnfra/apps/copyparty/config/copyparty.conf
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /srv/copyparty/data/
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: apps
spec:
  selector:
    app: copyparty
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3923
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
  - host: fileshare.skarja.la
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: copyparty
            port:
              number: 80
