kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funnel
  namespace: apps
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: funnel
      port:
        name: https
  ingressClassName: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: funnel
  namespace: apps
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
