kubernetes/navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: apps
  labels:
    app.kubernetes.io/name: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      containers:
      - name: navidrome
        image: docker.io/deluan/navidrome:0.58.0
        ports:
        - containerPort: 4533
        volumeMounts:
        - name: music
          mountPath: /data/music/
      volumes:
      - name: music
        persistentVolumeClaim:
        
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: apps
spec:
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
  - host: music.skarja.la
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome
            port:
              number: 80
